<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sample.assignment.ui.adhaar.AdhaarFragment"
        android:label="@string/lbl_find_aadhar"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.sample.assignment.ui.images.ImagesFragment"
        android:label="@string/lbl_select_image"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.sample.assignment.ui.result.ResultFragment"
        android:label="@string/lbl_result_list"
        tools:layout="@layout/fragment_result" />
</navigation>